# CyberSecurityProject

./: README.md  config.py  pyproject.toml  requirements.txt  setup.sh
app/: __init__.py  database.py  sendgrid_helper.py
app/admin/: routes.py
app/api/: main.py
app/api/admin/: router.py
app/api/auth/: deps.py  mfa_router.py  models.py  role_deps.py  router.py  schemas.py
app/api/crypto/: paillier_utils.py  shamir_utils.py
app/api/voting/: models.py  router.py  schemas.py
app/auth/: routes.py
app/models/: audit.py  user.py  vote.py
app/scripts/: generate_keys.py  seed_election_data.py  seed_roles.py
app/tests/: test_crypto.py
app/tests/bash/: login.sh  mfa_setup.sh  register.sh  role_assignment.py
app/utils/: audit.py  security.py
app/voting/: crypto.py  routes.py
cybersec_project.egg-info/: PKG-INFO  SOURCES.txt
frontend/src/: App.css  App.tsx  api.ts  types.ts
frontend/src/components/: ElectionList.tsx  Login.tsx  MFASetup.tsx  MFAVerify.tsx  Register.tsx  UserInfo.tsx  VotingInterface.tsx
